[package]
name = "connect-rpc"
version = "0.1.0"
edition = "2021"

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]

[dependencies]
base64 = "0.22"
bytes = "1.7.2"
form_urlencoded = "1.2.1"
futures-util = "0.3.31"
http = "1.1"
http-body = "1.0.1"
http-body-util = "0.1.2"
percent-encoding = "2.3.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tracing = "0.1.40"

reqwest = { version = "0.12.8", features = ["stream"], optional = true }