[package]
name = "connect-rpc-conformance"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
connect-rpc = { path = ".." }
http = "1.1.0"
prost = "0.13.3"
prost-types = "0.13.3"
reqwest = { version = "0.12.8", features = ["json", "stream"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
